# Epsilang

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
.cache/clangd/index/: codegen.cpp.D24658DC46E03DBC.idx  codegen.hpp.CC1408F9605B8E3A.idx  error.hpp.211025FD13E01D69.idx  main.cpp.C079C4A4BB9CA3AF.idx  parse.cpp.3E725DFDAC42E30D.idx  parse.hpp.079D5A0E35CD7000.idx  tokenise.cpp.9A0C46229FEA27E1.idx  tokenise.hpp.A7AF95D43EDC775E.idx
.github/workflows/: ci.yml
examples/: main.eps
include/core/: codegen.hpp  parse.hpp  tokenise.hpp
include/utils/: error.hpp
src/: main.c  main.cpp  notes.txt
src/core/: codegen.cpp  parse.cpp  tokenise.cpp
src/parse/: parse.c  parse.h
src/tokenize/: tokenize.c  tokenize.h
